--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <h1>!!!index.html has loaded!!!</h1>
     <!-- <div id="root"></div> -->
     <!--
       This HTML file is a template.
